fix: update CORS to support Vercel frontend URL via env var